services/config-server/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aami
  labels:
    name: aami
    environment: production
