services/config-server/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-server
  namespace: aami
  labels:
    app: config-server
    component: backend
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: config-server
  sessionAffinity: None
